# nodestrap

./: .gitignore  pyproject.toml
.codex/: CONTEXT.md  instructions.md
docs/: README.md  packaging_goals.md
src/nodestrap/: __init__.py  cli.py  config.py  executor.py  keys.py  paths.py  payload.py  plan.py  ssh.py  state.py
tests/: test_cli.py  test_config.py  test_executor.py  test_keys.py  test_payload.py  test_plan.py  test_ssh.py  test_state.py
